--- a/user/site.html
+++ b/user/site.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="/favicon.ico" type="image/ico" sizes="16x16">
+  <link rel="icon" href="./favicon.ico" type="image/ico" sizes="16x16">
 </head>
 <body>
 
