--- a/html/site.html
+++ b/html/site.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="./favicon.ico" type="image/ico" sizes="16x16">
+  <link rel="icon" href="https://raw.githubusercontent.com/AyyKamp/tvdb-rest/master/html/favicon.ico" type="image/ico" sizes="16x16">
   <title>Haha what a cool website</title>
 </head>
 <body>
