--- a/html/site.html
+++ b/html/site.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="icon" href="https://raw.githubusercontent.com/AyyKamp/tvdb-rest/master/html/favicon.ico" type="image/ico" sizes="16x16">
-  <title>Haha what a cool website</title>
+  <title>Haha what a cool website, isn't it?</title>
 </head>
 <body>
 
