--- a/html/getLatestEpisodeById.html
+++ b/html/getLatestEpisodeById.html
@@ -1,3 +1,3 @@
 <body>
-	<p>This endpoint is POST only. <a href="http://www.tvseriesapp.tk/#/api?id=getlatestepisodesbyseriesid">Documentation</a></p>
+	<p>This endpoint is POST only. <a href="http://www.tvseriesapp.tk/#/api?id=getlatestepisodebyid">Documentation</a></p>
 </body>
