--- a/html/getEpisodesBySeriesId.html
+++ b/html/getEpisodesBySeriesId.html
@@ -1,3 +1,3 @@
 <body>
-	<p>This endpoint is POST only. <a href="http://www.tvseriesapp.tk/#/api?id=getepisodesbyseriesid">Documentation</a></p>
+	<p>This endpoint is POST only. <a href="https://goo.gl/3XFCg4">Documentation</a></p>
 </body>
