--- a/html/getSeriesById.html
+++ b/html/getSeriesById.html
@@ -1,3 +1,3 @@
 <body>
-	<p>This endpoint is POST only. <a href="http://www.tvseriesapp.tk/#/api?id=getseriesbyid">Documentation</a></p>
+	<p>This endpoint is POST only. <a href="https://goo.gl/bLUwve">Documentation</a></p>
 </body>
