--- a/html/getSeriesByName.html
+++ b/html/getSeriesByName.html
@@ -1,3 +1,3 @@
 <body>
-	<p>This endpoint is POST only. <a href="http://www.tvseriesapp.tk/#/api?id=getseriesbyname">Documentation</a></p>
+	<p>This endpoint is POST only. <a href="https://goo.gl/ASfJqt">Documentation</a></p>
 </body>
